Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/clinit/AnnoWithClinitFail.out
AnnoWithClinitFail.java:14:5: compiler.err.annotation.missing.default.value: AnnoWithClinitFail, foo
AnnoWithClinitFail.java:21:1: compiler.err.annotation.missing.default.value: AnnoWithClinitFail, foo
2 errors
